# NavVLA

./: .gitignore  .gitmodules  LICENSE  README.md  train.py
data_collection/: data_collection.py
deployment/: VOICE_GUIDANCE.md  __init__.py  package.xml  setup.cfg  setup.py
deployment/config/: nav.yaml  pfoe.yaml  preprocess.yaml
deployment/launch/: navigation.launch.py  pfoe_debug.launch.py
deployment/navvla/: __init__.py  create_topomap.py  data_collection.py  navigation.py  preprocess.py  toponav.py  visualize.py  voice_guidance.py
deployment/rviz/: pfoe_debug.rviz
deployment/scripts/: create_data.py  create_topomap.py  data_collection.py
deployment/voice/: prompts.json  prompts_ja.md
pfoe/: CMakeLists.txt  package.xml
pfoe/include/pfoe/: Episode.hpp  Event.hpp  PFoENode.hpp  Particle.hpp  ParticleFilter.hpp  ProbDistribution.hpp
pfoe/scripts/: clip_encoder_node.py  record_episode.py  test_record_episode.py  topomap_viz_node.py
pfoe/src/: Episode.cpp  Event.cpp  Particle.cpp  ParticleFilter.cpp  pfoe_node.cpp
pfoe_interface/: package.xml  setup.cfg  setup.py
pfoe_interface/pfoe_interface/: pf_marker_node.py
tools/: dataset_quality_visualizer.py  lang_anotation_tool.py  merge_lora.py
training/: __init__.py  eval.py  loop.py  losses.py  optim.py  train.py
training/config/: dataset.yaml  network.yaml  train.yaml
training/data/: __init__.py  dataset.py  split.py
training/tests/: test_dataloader_seeding.py  test_dataset.py  test_dataset_quality_visualizer.py  test_losses.py  test_optim.py  test_split.py  test_train.py
